[project]
name = "ComfyUI-Korean-Prompt-Engineer-with-LLM"
description = "이 노드는 여러분이 한국어로 상상하는 모든 것을 멋진 이미지로 만들어 줄 수 있도록 도와주는 도구입니다. 코딩이나 복잡한 설정 없이도, 마치 전문가처럼 상세하고 멋진 영어 프롬프트를 자동으로 만들어줍니다."
version = "0.1.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["openai", "anthropic", "google-generativeai", "ollama", "aiohttp", "tenacity", "python-dotenv", "pydantic", "pydantic-settings", "diskcache", "pytest", "pytest-asyncio", "pytest-cov", "black", "flake8", "mypy"]

[project.urls]
Repository = "https://github.com/TheGarura/ComfyUI-Korean-Prompt-Engineer-with-LLM"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/TheGarura/ComfyUI-Korean-Prompt-Engineer-with-LLM"
"Bug Tracker" = "https://github.com/TheGarura/ComfyUI-Korean-Prompt-Engineer-with-LLM/issues"

[tool.comfy]
PublisherId = "garura"
DisplayName = "ComfyUI-Korean-Prompt-Engineer-with-LLM"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

